feat: Agregar clase BusinessRuleException feat: Agregar clase BaseException feat: Agregar clase ApiErrorDto feat: Agregar clase ResponseDto feat: Añadir clase MessageLoader

--- a/backend-orii/src/main/resources/messages.properties
+++ b/backend-orii/src/main/resources/messages.properties
@@ -3,7 +3,7 @@ IM002 = Information successfully stored!
 IM003 = Information successfully updated!
 IM004 = Information successfully deleted!
 EM001 = An unexpected error has occurred.
-EM002 = Record with identifier {0} not found.
+EM002 = Record of {0} with identifier {1} not found.
 EM003 = Parameter {0} is required in the URL and is missing.
 EM004 = Variable {0} is required in the URL and is missing.
 EM005 = The route {0} was not found.
