--- a/backend-orii/src/main/resources/messages.properties
+++ b/backend-orii/src/main/resources/messages.properties
@@ -13,5 +13,6 @@ EM008 = The field {0} cannot be blank.
 EM009 = Input validation has failed.
 EM010 = Record with identifier {0} already exists.
 EM011 = The field {0} did not receive the expected data type; a {1} was expected.
+EM012 = Invalid date format. Expected format: dd-MM-yyyy.
 
 
