--- a/backend-orii/src/main/resources/messages.properties
+++ b/backend-orii/src/main/resources/messages.properties
@@ -14,5 +14,6 @@ EM009 = Input validation has failed.
 EM010 = Record with identifier {0} already exists.
 EM011 = The field {0} did not receive the expected data type; a {1} was expected.
 EM012 = Invalid date format. Expected format: dd-MM-yyyy.
+EM013 = Required field: {0}.
 
 
